hw8/k8s/ml-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ml-api-service
  labels:
    app: ml-api
spec:
  selector:
    app: ml-api
  ports:
    - name: ml-api
      protocol: TCP
      port: 8000
